--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
@@ -198,3 +198,36 @@
   font-size: 16px;
   font-weight: 500;
 }
+
+.slider--buttons .slider__slide {
+  flex: 1 1 auto;
+}
+
+.slider--buttons .slider__slide > a,
+.slider--buttons .slider__slide > button {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  max-width: 100%;
+  height: auto;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #5c5c5c;
+  background-color: transparent;
+  position: relative;
+  display: inline-flex;
+  cursor: pointer;
+  touch-action: manipulation;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  border-radius: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.25;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.2s;
+  color: #3f3f3f;
+}
