--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/widgets/categories.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/widgets/categories.phtml
@@ -136,7 +136,7 @@ $template
         'title' => $escaper->escapeHtml($block->getData('heading')),
         'id' => 'collections-list-' . uniqid(),
         'is_full_page' => false,
-        'class' => 'slider--pagebuilder ' . $displayAsButtons ? 'slider--buttons' : '',
+        'class' => 'slider--pagebuilder ' . ($displayAsButtons ? 'slider--buttons' : ''),
         'is_actions_disabled' => $displayAsButtons
     ])
     ->render('Magento_Catalog::html/slider.phtml')
