Fix buttons styling

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
@@ -200,10 +200,10 @@
 }
 
 .slider--buttons .slider__slide {
-  flex: 1 1 auto;
+  flex: 0 1 auto;
 }
 
-.slider--buttons .slider__slide > a,
+.slider--buttons .slider__slide > a:not,
 .slider--buttons .slider__slide > button {
   padding-top: 12px;
   padding-bottom: 12px;
