INTERNAL-456: Fix background colors

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
@@ -41,8 +41,8 @@
         --color-background-50: #ffffff;
         --color-background-100: #ffffff;
         --color-background-400: #ffffff;
-        --color-background-500: #ffffff;
-        --color-background-600: #f2f2f2;
+        --color-background-500: #f2f2f2;
+        --color-background-600: #efefef;
         --color-background-700: #e6e6e6;
 
 
