--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -6,9 +6,9 @@ use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\ProductAttributes;
 use Hyva\Theme\ViewModel\ProductPage;
 use Hyva\Theme\ViewModel\SvgIcons;
-use Magento\Catalog\Block\Product\View;
 use Magento\Catalog\Model\Product;
 use Magento\Framework\Escaper;
+use Satoshi\Catalog\Block\Product\View;
 use Satoshi\Theme\Block\Popup;
 use Satoshi\Theme\Block\Template;
 
@@ -29,7 +29,7 @@ $productId = $product->getId();
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
-$cartErrMsg = $escaper->escapeHtml($block->getCartErrorMessage());
+$errorMessage = $block->getErrorMessage();
 ?>
 <h1 class="heading mb-1 ps-4 text-md leading-tight text-text-500 md:px-0 md:text-4xl max-md:pe-[--price-width]">
     <?= $block->getChildBlock('product.title')->getPageHeading() ?>
@@ -90,6 +90,12 @@ $cartErrMsg = $escaper->escapeHtml($block->getCartErrorMessage());
     </div>
 
     <div>
+        <?php if ($errorMessage): ?>
+            <div class="max-md:px-4 -mt-5 mb-2 md:-mt-3 md:mb-3 text-error">
+                <span><?= $errorMessage ?></span>
+            </div>
+        <?php endif; ?>
+
         <!-- Desktop options -->
         <div class="animate-on-transition max-md:hidden">
             <?= $block->getChildHtml('product.info.form') ?>
