INTERNAL-411-181 - Fix wishlist icon color on mobile

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/wishlist/wishlist-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/wishlist/wishlist-button.phtml
@@ -26,7 +26,7 @@ $wishlistItemsCount = $wishlist->getWishlistItemsQty();
   :class="{'hidden': !$store.main.isMobile && $store.resizable.isVisible('wishlist-desktop')}"
 >
   <div
-    class="contents"
+    class="contents text-text-50"
     x-show="!isWishlistVisible"
   >
     <span
