--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -73,7 +73,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                     'md:hidden': !$store.resizable.isVisible('search-desktop')
                 }"
             >
-                <?= $hyvaicons->renderHtml('close', attributes: ['title' => 'Clear']); ?>
+                <?= $hyvaicons->renderHtml('close'); ?>
             </button>
         </div>
     </form>
