--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/sections/description.phtml
@@ -42,7 +42,7 @@ $cssClasses = $block->getData('css_classes') ?? 'prose';
             <?= $escaper->escapeHtml($product->getName()) ?>
         </div>
         <span x-ref="AccordionIcon" class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable" style="rotate: -180deg;">
-            <?= $hyvaicons->renderHtml('chevron', 'rotate-90', attributes: ['title' => '']); ?>
+            <?= $hyvaicons->renderHtml('chevron', 'rotate-90'); ?>
         </span>
     </button>
     <div
