--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/sidebar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/sidebar.phtml
@@ -88,7 +88,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                 :class="isLoading && 'button--disabled'"
                                 :disabled="isLoading"
                             >
-                                <?= $hyvaicons->renderHtml('close', 'text-lg', attributes: ['title' => $escaper->escapeHtmlAttr(__('remove'))]); ?>
+                                <?= $hyvaicons->renderHtml('close', 'text-lg'); ?>
                             </button>
                         </li>
                     </template>
