INTERNAL-411-181 - Update headings color to be darker

--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/summary.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/summary.phtml
@@ -41,7 +41,7 @@ $product = $block->getProduct();
                     :inert="!isSummaryExpanded"
                 >
                     <div class="flex items-center justify-between pt-2">
-                        <h2 class="text-text-500"><?= __('Summary') ?></h2>
+                        <h2 class="text-text-400"><?= __('Summary') ?></h2>
                         <button
                             type="button"
                             class="button button--outline-secondary icon-button icon-button--size-xs md:hidden"
@@ -91,7 +91,7 @@ $product = $block->getProduct();
             >
                 <div
                     class="flex items-center justify-between overflow-x-hidden bg-bg-500 pb-2 px-2 pt-4 text-text-500 max-md:px-3">
-                    <h2><?= __('Bundle total') ?></h2>
+                    <h2 class="text-text-400"><?= __('Bundle total') ?></h2>
                     <div
                         class="flex translate-x-0 items-center gap-5 transition-transform delay-200 duration-300 motion-reduce:transition-none"
                         :class="{
