INTERNAL-411-185 - Fix scroll issue on certain screen width on PDP and PLP

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -142,7 +142,7 @@ $stickyActions = <<<HTML
                 <div
                     id="ProductBottomActionsPopup"
                     x-show="\$store.popup.currentPopup == 'product_bottom_actions'"
-                    class="sticky-actions flex w-full items-center gap-3 bg-bg-500 overflow-x-scroll overscroll-x-contain"
+                    class="sticky-actions flex w-full items-center gap-3 bg-bg-500 overflow-x-auto overscroll-x-contain"
                 >
                     {$priceHtml}
                     <div
