--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/bottom-filters-popup.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/bottom-filters-popup.phtml
@@ -20,7 +20,7 @@ $selectedSort = $block->getData('selected_sort') ?? [];
     <div class="min-h-9"></div>
 
     <template x-portal="document.getElementById('popup-fixed-content-portal')">
-        <div class="overflow-x-scroll overscroll-x-contain pl-3" x-show="$store.main.isMobile && $store.popup.currentPopup === 'bottom-filters'">
+        <div class="overflow-x-auto overscroll-x-contain pl-3" x-show="$store.main.isMobile && $store.popup.currentPopup === 'bottom-filters'">
             <div class="flex items-center gap-3">
                 <button
                     type="button"
