Fix image fallback size in navigation on IOS

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -83,7 +83,7 @@ if ($product) {
                     <img
                         height="100%"
                         width="100%"
-                        class="max-h-full w-auto object-center object-cover h-full mix-blend-darken"
+                        class="max-h-full object-center object-cover size-full mix-blend-darken"
                         :src="src"
                         :alt="images[0].caption"
                         alt=""
@@ -94,7 +94,7 @@ if ($product) {
                         id="mobile-image"
                         height="100%"
                         width="100%"
-                        class="no-fade object-center w-auto object-cover h-full mix-blend-darken"
+                        class="no-fade object-center object-cover size-full mix-blend-darken"
                         :src="images[0].img"
                         :alt="images[0].caption"
                         alt=""
