INTERNAL-411-64 - Refactor: On search, make body not scrollable

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -13,6 +13,7 @@
         <!-- Attributes in body element which required to show correct color of logo text -->
         <attribute name="class" value="gradient" />
         <attribute name="class" value="bg-bg-500" />
+        <attribute name=":class" value="{'overflow-hidden': $store.resizable.isVisible('search-desktop')}"/>
         <attribute name="x-data" value="{}" />
         <attribute name="@private-content-loaded.window" value="$store.main.updatePrivateContent($event.detail.data)" />
 
