--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
@@ -203,7 +203,7 @@
   flex: 0 1 auto;
 }
 
-.slider--buttons .slider__slide > a:not,
+.slider--buttons .slider__slide > a,
 .slider--buttons .slider__slide > button {
   padding-top: 12px;
   padding-bottom: 12px;
